# luciana

./: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  default.nix  flake.nix  hie.yaml
backend/: backend.cabal
backend/src/: Backend.hs
backend/src-bin/: main.hs
backend/src/Backend/: Api.hs  App.hs  Auth.hs  Db.hs  Env.hs  Notifications.hs  Period.hs  Push.hs
backend/src/Backend/Auth/: Combinator.hs  Cookie.hs  Login.hs  Logout.hs  Me.hs  RateLimit.hs  Register.hs  Session.hs
backend/src/Backend/RateLimit/: Combinator.hs
backend/src/Backend/Schema/: Db.hs  Locale.hs  Migration.hs  NotificationPref.hs  PeriodEntry.hs  PushSubscription.hs  Session.hs  User.hs
common/: common.cabal
common/src/Common/: Api.hs  Auth.hs  I18n.hs  Notifications.hs  Period.hs  Push.hs  Route.hs
frontend/: frontend.cabal
frontend/src/: Frontend.hs
frontend/src-bin/: main.hs
frontend/src/Frontend/: Api.hs  Auth.hs  Login.hs  Signup.hs  Toast.hs
frontend/src/Frontend/Auth/: Widget.hs
frontend/src/Frontend/Widget/: Form.hs  Icon.hs
plans/: Haskell.md  architecture.md  authentication.md  backend-plan-1.md  backend-plan-2.md  backend-spec.md  backend.md  best-practices.md  claude-md-improvements.md  codex-plans-review.md  current-state.md  daisyui.md  database-backend-sql-bridge.md  database-plan-1.md  database-plan-2.md  database-spec.md  database.md  dev-environment.md  goal.md  json-field-naming-spec.md  obelisk-init-guide.md  obelisk.md  route-modules.md  routes.md  schema.md  tailwind.md  toasts.md  ui-best-practices.md  visual-design.md
static/: default.nix
static/src/: nixpkgs.nix  package.json  tailwind.config.js
