name: backend
version: 0.1
cabal-version: >= 1.8
build-type: Simple

library
  hs-source-dirs: src
  if impl(ghcjs)
    buildable: False
  build-depends: base
               , beam-core
               , beam-migrate
               , beam-postgres
               , bytestring
               , common
               , containers
               , frontend
               , obelisk-backend
               , obelisk-executable-config-lookup
               , obelisk-route
               , postgresql-simple
               , relude
               , text
               , time
  exposed-modules:
    Backend
    Backend.Schema.Db
    Backend.Schema.NotificationPref
    Backend.Schema.PeriodEntry
    Backend.Schema.PushSubscription
    Backend.Schema.Session
    Backend.Schema.User
  default-extensions:
    NoImplicitPrelude
    DataKinds
    DerivingStrategies
    DerivingVia
    LambdaCase
    MultiWayIf
    OverloadedStrings
    StrictData
    TypeFamilies
    ViewPatterns
  ghc-options: -Wall -O -fno-show-valid-hole-fits
               -- unsafe code
               -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields
               -- unneeded code
               -Widentities -Wredundant-constraints
  if impl(ghc >= 8.8)
    ghc-options:
               -Wmissing-deriving-strategies

executable backend
  main-is: main.hs
  hs-source-dirs: src-bin
  default-extensions:
    NoImplicitPrelude
    DataKinds
    DerivingStrategies
    DerivingVia
    LambdaCase
    MultiWayIf
    OverloadedStrings
    StrictData
    TypeFamilies
    ViewPatterns
  ghc-options: -Wall -O -fno-show-valid-hole-fits -threaded
               -- unsafe code
               -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields
               -- unneeded code
               -Widentities -Wredundant-constraints
  if impl(ghc >= 8.8)
    ghc-options:
               -Wmissing-deriving-strategies
  if impl(ghcjs)
    buildable: False
  build-depends: base
               , backend
               , common
               , frontend
               , obelisk-backend
               , relude
