name: backend
version: 0.1
cabal-version: >= 1.10
build-type: Simple

library
  hs-source-dirs: src
  default-language: Haskell2010
  if impl(ghcjs)
    buildable: False
  build-depends: base
               , aeson
               , base64-bytestring
               , bcrypt
               , beam-core
               , beam-migrate
               , beam-postgres
               , bytestring
               , common
               , containers
               , cookie
               , cryptonite
               , frontend
               , memory
               , obelisk-backend
               , obelisk-executable-config-lookup
               , obelisk-route
               , postgresql-simple
               , relude
               , resource-pool
               , snap-core
               , text
               , time
               , unordered-containers
  exposed-modules:
    Backend
    Backend.Api
    Backend.Auth
    Backend.Auth.Cookie
    Backend.Auth.RateLimit
    Backend.Auth.Session
    Backend.Db
    Backend.Schema.Db
    Backend.Schema.Migration
    Backend.Schema.NotificationPref
    Backend.Schema.PeriodEntry
    Backend.Schema.PushSubscription
    Backend.Schema.Session
    Backend.Schema.User
  default-extensions:
    NoImplicitPrelude
    DataKinds
    DerivingStrategies
    DerivingVia
    LambdaCase
    MultiWayIf
    OverloadedStrings
    StrictData
    TypeFamilies
    ViewPatterns
  ghc-options: -Wall -O -fno-show-valid-hole-fits
               -- unsafe code
               -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields
               -- unneeded code
               -Widentities -Wredundant-constraints
  if impl(ghc >= 8.8)
    ghc-options:
               -Wmissing-deriving-strategies

executable backend
  main-is: main.hs
  hs-source-dirs: src-bin
  default-language: Haskell2010
  default-extensions:
    NoImplicitPrelude
    DataKinds
    DerivingStrategies
    DerivingVia
    LambdaCase
    MultiWayIf
    OverloadedStrings
    StrictData
    TypeFamilies
    ViewPatterns
  ghc-options: -Wall -O -fno-show-valid-hole-fits -threaded
               -- unsafe code
               -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields
               -- unneeded code
               -Widentities -Wredundant-constraints
  if impl(ghc >= 8.8)
    ghc-options:
               -Wmissing-deriving-strategies
  if impl(ghcjs)
    buildable: False
  build-depends: base
               , backend
               , common
               , frontend
               , obelisk-backend
               , relude
