name: common
version: 0.1
cabal-version: >= 1.10
build-type: Simple

library
  hs-source-dirs: src
  default-language: Haskell2010
  build-depends: base
               , aeson
               , mtl
               , obelisk-route
               , relude
               , text
  exposed-modules:
    Common.Api
    Common.Auth
    Common.I18n
    Common.Route
  default-extensions:
    NoImplicitPrelude
    DataKinds
    DerivingStrategies
    DerivingVia
    LambdaCase
    MultiWayIf
    OverloadedStrings
    StrictData
    TypeFamilies
    ViewPatterns
  ghc-options: -Wall -O -fno-show-valid-hole-fits
               -- unsafe code
               -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields
               -- unneeded code
               -Widentities -Wredundant-constraints
  if impl(ghc >= 8.8)
    ghc-options:
               -Wmissing-deriving-strategies
