name: frontend
version: 0.1
cabal-version: >= 1.10
build-type: Simple

library
  hs-source-dirs: src
  default-language: Haskell2010
  build-depends: base
               , aeson
               , bytestring
               , common
               , containers
               , data-default
               , jsaddle
               , lens
               , obelisk-executable-config-lookup
               , obelisk-frontend
               , obelisk-generated-static
               , obelisk-route
               , reflex-dom-core
               , relude
               , text
               , time
  exposed-modules:
    Frontend
    Frontend.Api
    Frontend.Auth
    Frontend.Login
    Frontend.Signup
    Frontend.Toast
    Frontend.Widget.Form
    Frontend.Widget.Icon
  default-extensions:
    NoImplicitPrelude
    DataKinds
    DerivingStrategies
    DerivingVia
    LambdaCase
    MultiWayIf
    OverloadedStrings
    StrictData
    TypeFamilies
    ViewPatterns
  ghc-options: -Wall -O -fno-show-valid-hole-fits
               -- unsafe code
               -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields
               -- unneeded code
               -Widentities -Wredundant-constraints
  if impl(ghc >= 8.8)
    ghc-options:
               -Wmissing-deriving-strategies

executable frontend
  main-is: main.hs
  hs-source-dirs: src-bin
  default-language: Haskell2010
  build-depends: base
               , common
               , frontend
               , obelisk-frontend
               , obelisk-route
               , reflex-dom
               , relude
  default-extensions:
    NoImplicitPrelude
    DataKinds
    DerivingStrategies
    DerivingVia
    LambdaCase
    MultiWayIf
    OverloadedStrings
    StrictData
    TypeFamilies
    ViewPatterns
  ghc-options: -Wall -O -fno-show-valid-hole-fits -threaded
               -- unsafe code
               -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields
               -- unneeded code
               -Widentities -Wredundant-constraints
  if impl(ghc >= 8.8)
    ghc-options:
               -Wmissing-deriving-strategies
  if impl(ghcjs)
    ghc-options: -dedupe
    cpp-options: -DGHCJS_BROWSER
  if os(darwin)
    ghc-options: -dynamic
